--- a/D3DX9/D3DX9PRECTICE/D3DX9PRECTICE_2010.vcxproj
+++ b/D3DX9/D3DX9PRECTICE/D3DX9PRECTICE_2010.vcxproj
@@ -387,11 +387,21 @@
   <ItemGroup>
     <ClCompile Include="CameraManager.cpp" />
     <ClCompile Include="d3dUtility.cpp" />
+    <ClCompile Include="Ground.cpp" />
     <ClCompile Include="MainProc.cpp" />
+    <ClCompile Include="MeshLoader.cpp" />
     <ClCompile Include="MeshManager.cpp" />
+    <ClCompile Include="Object.cpp" />
+    <ClCompile Include="ObjectManager.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClInclude Include="CameraManager.h" />
     <ClInclude Include="d3dUtility.h" />
+    <ClInclude Include="Ground.h" />
+    <ClInclude Include="MeshLoader.h" />
     <ClInclude Include="MeshManager.h" />
+    <ClInclude Include="Object.h" />
+    <ClInclude Include="ObjectManager.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="stdafx.h" />
     <None Include="DXUT\Optional\directx.ico" />
