--- a/D3DX9/D3DX9PRECTICE/D3DX9PRECTICE_2010.vcxproj.filters
+++ b/D3DX9/D3DX9PRECTICE/D3DX9PRECTICE_2010.vcxproj.filters
@@ -45,6 +45,15 @@
     <Filter Include="Object\Player">
       <UniqueIdentifier>{6d870f51-dace-4c6c-b954-990d1c9e2a5f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Manager\InputManager">
+      <UniqueIdentifier>{d8731f20-05d2-4a68-9ac9-8bcea49cb010}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Manager\CameraManager\Cameras">
+      <UniqueIdentifier>{981cfe69-6645-44f9-8cc9-8c953431fd4c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Manager\CameraManager\Cameras\TpCamera">
+      <UniqueIdentifier>{612e757c-8ab8-45ef-8a64-4ad6ecd51821}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="DXUT\Optional\directx.ico">
@@ -134,6 +143,10 @@
     <ClCompile Include="Player.cpp">
       <Filter>Object\Player</Filter>
     </ClCompile>
+    <ClCompile Include="InputManager.cpp">
+      <Filter>Manager\InputManager</Filter>
+    </ClCompile>
+    <ClCompile Include="Cameras.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CLInclude Include="resource.h">
@@ -173,6 +186,10 @@
     <ClInclude Include="Player.h">
       <Filter>Object\Player</Filter>
     </ClInclude>
+    <ClInclude Include="InputManager.h">
+      <Filter>Manager\InputManager</Filter>
+    </ClInclude>
+    <ClInclude Include="Cameras.h" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
